--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -13,6 +13,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d6c8e3d",
+   "metadata": {},
+   "source": [
+    "This project was done during 1 weekend, and it still needs a lot of changes and improvements. The improvements and changes for the continuation of this project will be :\n",
+    "\n",
+    "<ol>\n",
+    "    <li>Change the neural network to a convolution type network (CNN). Which is much more suitable when using image data as input.</li>\n",
+    "    \n",
+    "\n",
+    "<li>A SSH connection, rather than a local connection, to avoid latencies (on my PC), because my GPU is not powerful enough to support the Simulator and the model learning with CUDA, which uses all the GPU without limitation. This makes the simulator slow down and create a latency.</li>\n",
+    "    \n",
+    "\n",
+    "<li>Documentation on a way to have a better method to define the reward functions, because until now, it was defined in an arbitrary way. The EPIC method for Equivalent-Policy Invariant Comparison, seems to be a promising way.</li>\n",
+    "\n",
+    "    \n",
+    "<li>Then an optimization of the hypers-parameters, with Optuna and also with the NAS method, to automate the design of artificial neural networks, so that it is optimal !</li>\n",
+    "    \n",
+    "\n",
+    "<li>To test also other type of sensor that Carla proposes, because there we use only the front RGB camera of the vehicle.</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d75fdad0",
    "metadata": {},
    "source": [
