--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6c8e3d",
+   "id": "1f007953",
    "metadata": {},
    "source": [
     "This project was done during 1 weekend, and it still needs a lot of changes and improvements. The improvements and changes for the continuation of this project will be :\n",
@@ -22,7 +22,7 @@
     "    <li>Change the neural network to a convolution type network (CNN). Which is much more suitable when using image data as input.</li>\n",
     "    \n",
     "\n",
-    "<li>A SSH connection, rather than a local connection, to avoid latencies (on my PC), because my GPU is not powerful enough to support the Simulator and the model learning with CUDA, which uses all the GPU without limitation. This makes the simulator slow down and create a latency.</li>\n",
+    "<li>A SSH connection to the faculty computers, rather than a local connection, to avoid latencies (on my PC), because my GPU is not powerful enough to support the Simulator and the model learning with CUDA, which uses all the GPU without limitation. This makes the simulator slow down and create a latency.</li>\n",
     "    \n",
     "\n",
     "<li>Documentation on a way to have a better method to define the reward functions, because until now, it was defined in an arbitrary way. The EPIC method for Equivalent-Policy Invariant Comparison, seems to be a promising way.</li>\n",
