--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -5,7 +5,7 @@
    "id": "cbcbf6ad",
    "metadata": {},
    "source": [
-    "## Presentation for the application of deep reinforcement learning for autonomous driving\n",
+    "# Presentation for the application of deep reinforcement learning for autonomous driving with the Carla simulator\n",
     "\n",
     "##### Important this project was realized with Python 3.7.9 and with the last version of the libraries used\n",
     "##### With the Windows 0.9.12 version of Carla, although there should be no problem with other versions and linux versions under Ubuntu, but not yet tested!"
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f007953",
+   "id": "97767a54",
    "metadata": {},
    "source": [
     "This project was done during 1 weekend, and it still needs a lot of changes and improvements. The improvements and changes for the continuation of this project will be :\n",
