--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -8,7 +8,7 @@
     "# Presentation for the application of deep reinforcement learning for autonomous driving with the Carla simulator\n",
     "\n",
     "##### Important this project was realized with Python 3.7.9 and with the last version of the libraries used\n",
-    "##### With the Windows 0.9.12 version of Carla, although there should be no problem with other versions and linux versions under Ubuntu, but not yet tested!"
+    "##### The project was based on the Windows 0.9.12 version of Carla, but there should be no problem running it with the Linux or Ubuntu versions, although I have not tested it yet !"
    ]
   },
   {
