--- a/Project_presentation.ipynb
+++ b/Project_presentation.ipynb
@@ -31,7 +31,7 @@
     "<li>Then an optimization of the hypers-parameters, with Optuna and also with the NAS method, to automate the design of artificial neural networks, so that it is optimal !</li>\n",
     "    \n",
     "\n",
-    "<li>To test also other type of sensor that Carla proposes, because there we use only the front RGB camera of the vehicle.</li>\n",
+    "<li>To test also the other types of sensor that Carla proposes, because here we use only the front RGB camera of the vehicle.</li>\n",
     "</ol>"
    ]
   },
